# SV-Sim

./: LICENSE  NOTICE  README.md  summit.txt
svsim/: CMakeLists.txt  set_env.sh  summit_dmsim.lsf
svsim/QASMBench/: .test_svsim_qasmbench.py.swp  svsim_qasm.py  test_svsim_qasmbench.py
svsim/QASMBench/large/bigadder_n18/: bigadder_n18.py
svsim/QASMBench/large/bv_n19/: bv_n19.py
svsim/QASMBench/large/bwt_n21/: bwt_n21.py
svsim/QASMBench/large/cat_state_n22/: cat_state_n22.py
svsim/QASMBench/large/cc_n18/: cc_n18.py
svsim/QASMBench/large/dnn_n16/: dnn_n16.py
svsim/QASMBench/large/ghz_state_n23/: ghz_state_n23.py
svsim/QASMBench/large/ising_n26/: ising_n26.py
svsim/QASMBench/large/multiplier_n25/: multiplier_n25.py
svsim/QASMBench/large/qft_n20/: qft_n20.py
svsim/QASMBench/large/square_root_n18/: square_root_n18.py
svsim/QASMBench/large/swap_test_n25/: swap_test_n25.py
svsim/QASMBench/large/wstate_n27/: wstate_n27.py
svsim/QASMBench/medium/adder_n10/: adder_n10.py
svsim/QASMBench/medium/bb84_n8/: bb84_n8.py
svsim/QASMBench/medium/bv_n14/: bv_n14.py
svsim/QASMBench/medium/cc_n12/: cc_n12.py
svsim/QASMBench/medium/dnn_n8/: dnn_n8.py
svsim/QASMBench/medium/ising_n10/: ising_n10.py
svsim/QASMBench/medium/multiplier_n15/: multiplier_n15.py
svsim/QASMBench/medium/multiply_n13/: multiply_n13.py
svsim/QASMBench/medium/qaoa_n6/: qaoa_n6.py
svsim/QASMBench/medium/qf21_n15/: qf21_n15.py
svsim/QASMBench/medium/qft_n15/: qft_n15.py
svsim/QASMBench/medium/qpe_n9/: qpe_n9.py
svsim/QASMBench/medium/sat_n11/: sat_n11.py
svsim/QASMBench/medium/seca_n11/: seca_n11.py
svsim/QASMBench/medium/simon_n6/: simon_n6.py
svsim/QASMBench/medium/vqe_uccsd_n6/: vqe_uccsd_n6.py
svsim/QASMBench/medium/vqe_uccsd_n8/: vqe_uccsd_n8.py
svsim/QASMBench/small/adder_n4/: adder_n4.py
svsim/QASMBench/small/basis_change_n3/: basis_change_n3.py
svsim/QASMBench/small/basis_trotter_n4/: basis_trotter_n4.py
svsim/QASMBench/small/bell_n4/: bell_n4.py
svsim/QASMBench/small/cat_state_n4/: cat_state_n4.py
svsim/QASMBench/small/deutsch_n2/: deutsch_n2.py
svsim/QASMBench/small/dnn_n2/: dnn_n2.py
svsim/QASMBench/small/error_correctiond3_n5/: error_correctiond3_n5.py
svsim/QASMBench/small/fredkin_n3/: fredkin_n3.py
svsim/QASMBench/small/grover_n2/: grover_n2.py
svsim/QASMBench/small/hs4_n4/: hs4_n4.py
svsim/QASMBench/small/inverseqft_n4/: inverseqft_n4.py
svsim/QASMBench/small/ipea_n2/: ipea_n2.py
svsim/QASMBench/small/iswap_n2/: iswap_n2.py
svsim/QASMBench/small/linearsolver_n3/: linearsolver_n3.py
svsim/QASMBench/small/lpn_n5/: lpn_n5.py
svsim/QASMBench/small/pea_n5/: pea_n5.py
svsim/QASMBench/small/qaoa_n3/: qaoa_n3.py
svsim/QASMBench/small/qec_en_n5/: qec_en_n5.py
svsim/QASMBench/small/qec_sm_n5/: qec_sm_n5.py
svsim/QASMBench/small/qft_n4/: .qft_n4.py.swp  qft_n4.py
svsim/QASMBench/small/qrng_n4/: qrng_n4.py
svsim/QASMBench/small/quantumwalks_n2/: quantumwalks_n2.py
svsim/QASMBench/small/shor_n5/: shor_n5.py
svsim/QASMBench/small/teleportation_n3/: teleportation_n3.py
svsim/QASMBench/small/toffoli_n3/: toffoli_n3.py
svsim/QASMBench/small/variational_n4/: variational_n4.py
svsim/QASMBench/small/vqe_uccsd_n4/: vqe_uccsd_n4.py
svsim/QASMBench/small/wstate_n3/: wstate_n3.py
svsim/compare/: append_evaluation.py  main.py  qiskit_bench.py  qs_bench.py
svsim/compare/sc21_compare/: README.md
svsim/compare/sc21_compare/cirq/: cirq_bench.py  cirq_bv_n14.py  cirq_cc_n12.py  cirq_multiplier_n15.py  cirq_multiply_n13.py  cirq_qf21_n15.py  cirq_qft_n15.py  cirq_sat_n11.py  cirq_seca_n11.py
svsim/compare/sc21_compare/qiskit/: qiskit_bench.py  sat_n11.qasm
svsim/compare/sc21_compare/qiskit/results/bv_n14/: qiskit_bv_n14_results.txt
svsim/compare/sc21_compare/qiskit/results/cc_n12/: qiskit_cc_n12_results.txt
svsim/compare/sc21_compare/qiskit/results/multiplier_n15/: qiskit_multiplier_n15_results.txt
svsim/compare/sc21_compare/qiskit/results/multiply_n13/: qiskit_multiply_n13_results.txt
svsim/compare/sc21_compare/qiskit/results/qf21_n15/: qiskit_qf21_n15_results.txt
svsim/compare/sc21_compare/qsharp/: qs_bench.py  qsharp_bv_n14.qs  qsharp_cc_n12.qs  qsharp_multiplier_n15.qs  qsharp_multiply_n13.qs  qsharp_qf21_n15.qs  qsharp_qft_n15.qs  qsharp_sat_n11.qs  qsharp_seca_n11.qs
svsim/crusher/: .set_env.sh.swp  CMakeLists.txt  CMakeLists.txt_bak  set_env.sh
svsim/crusher/qiskit/: .svsim_python.cu.swp  CMakeLists.txt  setup.py  svsim_python.cpp  svsim_python.cu
svsim/crusher/qiskit/qiskit_nwqsim_provider/: qobj_to_nwqsim.py  svsim_gpu_simulator.py
svsim/crusher/qiskit/test/: .adder.py.swp  adder.py  ghz.py  ma.sh  simple.py
svsim/example/: CMakeLists.txt  Makefile  adder_n10.py  adder_n10_amdgpu_mpi.cpp  adder_n10_amdgpu_omp.cpp  adder_n10_amdgpu_sin.cpp  adder_n10_cpu_mpi.cpp  adder_n10_cpu_omp.cpp  adder_n10_cpu_sin.cpp  adder_n10_mpi.py  adder_n10_nvgpu_mpi.cu  adder_n10_nvgpu_omp.cu  adder_n10_nvgpu_sin.cu  adder_n10_omp.py  adder_n10_sin.py
svsim/src/: Makefile  config.hpp  py_amdgpu_mpi_wrapper.cpp  py_amdgpu_omp_wrapper.cpp  py_amdgpu_sin_wrapper.cpp  py_cpu_mpi_wrapper.cpp  py_cpu_omp_wrapper.cpp  py_cpu_sin_wrapper.cpp  py_nvgpu_mpi_wrapper.cu  py_nvgpu_omp_wrapper.cu  py_nvgpu_sin_wrapper.cu  py_wrapper.cpp  svsim_amdgpu_mpi.hpp  svsim_amdgpu_omp.hpp  svsim_amdgpu_sin.hpp  svsim_cpu_mpi.hpp  svsim_cpu_omp.hpp  svsim_cpu_sin.hpp  svsim_nvgpu_mpi.cuh  svsim_nvgpu_omp.cuh  svsim_nvgpu_sin.cuh  util_amdgpu.hpp  util_nvgpu.cuh
svsim/summit_cpu/: bigadder_n18  bigadder_n18.cpp  square_root_n18  summit_cpu_oshmem_mpi_large.txt  svsim_qasm_cplus.py  test_svsim_large.py
svsim/summit_gpu/: svsim_qasm_cplus.py  test_svsim_large.py
svsim/tool/: randomtest_n14.py  run_dmsim_qasm.sh  svsim_qasm.py  svsim_qasm_cplus.py  vqe_uccsd_n8.cpp  vqe_uccsd_n8.py
svsim/unit_test/: CMakeLists.txt  Makefile  unit_test_cpu_mpi.cpp  unit_test_cpu_omp.cpp  unit_test_cpu_sin.cpp  unit_test_nvgpu_mpi.cu  unit_test_nvgpu_omp.cu  unit_test_nvgpu_sin.cu
svsim_qsharp/: BitFlipCode_driver.cc  CustomModAdd.ll  Grover_driver.cc  (+32 more)
(+44 files in other folders)
